--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
+        "lint-staged": "^14.0.1",
         "vite": "^4.0.0"
+    },
+    "lint-staged": {
+        "**/*.php*": [
+            "vendor/bin/duster lint"
+        ]
     }
 }
