--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0",
+        "pestphp/pest": "^2.24",
+        "pestphp/pest-plugin-drift": "^2.5",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0",
         "tightenco/duster": "^2.4"
