--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
         "lint-staged": "^14.0.1",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "lint-staged": {
