--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.6",
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "husky": "^8.0.3",
