--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^8.1",
         "ext-pdo": "*",
+        "geocoder-php/mapbox-provider": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "^1.18",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "spatie/laravel-permission": "^6.3"
+        "spatie/laravel-permission": "^6.3",
+        "toin0u/geocoder-laravel": "^4.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
