--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.9",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.25",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
         "pestphp/pest": "^2.24",
         "pestphp/pest-plugin-drift": "^2.5",
         "phpunit/phpunit": "^10.1",
