--- a/composer.json
+++ b/composer.json
@@ -2,32 +2,35 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-pdo": "*",
         "geocoder-php/mapbox-provider": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/fortify": "^1.18",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0",
+        "laravel/fortify": "^1.20",
+        "laravel/framework": "^11.7",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.3",
         "spatie/laravel-permission": "^6.3",
         "toin0u/geocoder-laravel": "^4.7"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.23",
         "larastan/larastan": "^2.9",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.25",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.0",
         "pestphp/pest": "^2.24",
         "pestphp/pest-plugin-drift": "^2.5",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0",
+        "phpunit/phpunit": "^10.5",
+        "spatie/laravel-ignition": "^2.4",
         "tightenco/duster": "^2.4"
     },
     "autoload": {
